# strava_connector

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: conf.py  strava.py
